html changed to work with bootstrap, select fields auto update with current time and date

--- a/layout.css
+++ b/layout.css
@@ -17,3 +17,16 @@ img {
 	font-style: italic;
 }
 
+.row {
+	padding-bottom: 4px;
+}
+
+button { 
+color:white;
+background-color:darkred; 
+
+}
+
+button:hover{
+	color:rgb(235, 235, 71);
+}
